# Timetable_generator

./: .gitignore  CMakeLists.txt  Classroom.cpp  Classroom.h  Course.cpp  Course.h  DataProvider.cpp  DataProvider.h  Generator.cpp  Generator.h  Graph.cpp  Graph.h  GraphProperty.cpp  GraphProperty.h  NRPA.cpp  NRPA.h  README.md  Students.cpp  Students.h  Teacher.cpp  Teacher.h  Time.cpp  Time.h  Timetable.cpp  Timetable.h  Vertex.cpp  Vertex.h  VertexProperty.cpp  VertexProperty.h  example.data  main.cpp
ExcelFormat/: BasicExcel.cpp  BasicExcel.hpp  CMakeLists.txt  ExcelFormat.h
